--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,17 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.6.6
+mod_version = 1.6.7
 maven_group = io.github.orlouge.nomobfarm
 archives_name = nomobfarm
-enabled_platforms = fabric,forge
+enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.20.1
-yarn_mappings = 1.20.1+build.1
+minecraft_version = 1.21
+yarn_mappings = 1.21+build.1
 
 # Dependencies
-fabric_loader_version = 0.16.5
-fabric_api_version = 0.92.2+1.20.1
-forge_version = 1.20.1-47.3.3
+fabric_loader_version = 0.16.9
+fabric_api_version = 0.102.0+1.21
+neoforge_version = 21.0.42-beta
+yarn_mappings_patch_neoforge_version = 1.21+build.4
